--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="manifest" href="/public/manifest.json" />
     <title>Welcome to Egochain</title>
   </head>
   <body>
