--- a/index.html
+++ b/index.html
@@ -3,13 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/egax_logo.png" />
+    <link rel="apple-touch-icon" href="/egax_logo.png" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1,maximum-scale=5,minimum-scale=1"
+    />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Egochain- Evm Compartible Blockchain For Smart Automobiles"
+    />
+    <link rel="manifest" href="/manifest.json" />
     <link
       href="https://fonts.cdnfonts.com/css/utendo?styles=154240,154237,154242,154236,154238,154239,154241,154233,154235,154232,154234"
       rel="stylesheet"
     />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="manifest" href="/public/manifest.json" />
     <title>Welcome to Egochain</title>
   </head>
   <body>
